--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "prepare": "husky"
   },
   "dependencies": {
     "@tresjs/nuxt": "^2.1.0",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.4",
     "@types/three": "^0.161.2",
-    "eslint": "^8.56.0"
+    "eslint": "^8.56.0",
+    "husky": "^9.0.10"
   }
 }
