--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@tresjs/core": "^3.7.0",
     "@tresjs/nuxt": "^2.1.0",
     "nuxt": "^3.10.0",
     "three": "^0.161.0",
