--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@tresjs/cientos": "^3.8.0",
     "@tresjs/core": "^3.7.0",
     "@tresjs/nuxt": "^2.1.0",
+    "@vueuse/core": "^10.9.0",
     "nuxt": "^3.10.0",
     "three": "^0.161.0",
     "vue": "^3.4.15",
